# Ngen2D

./: CMakeLists.txt  README.md  main.cpp
demo/: CMakeLists.txt  Sandbox.cpp  Sandbox.h
engine/: CMakeLists.txt
engine/collision/: AABBCollider.h  Collider.h  Collision.cpp  Collision.h  CollisionManifold.h  CollisionResolver.cpp  CollisionResolver.h
engine/core/: Config.h  Time.h
engine/forces/: ForceGenerator.h  GravityForce.h
engine/math/: MathUtils.h  Vector2.cpp  Vector2.h
engine/physics/: PhysicsWorld.cpp  PhysicsWorld.h  RigidBody.cpp  RigidBody.h  SpatialHash.h
engine/shapes/: AABBShape.h  CircleShape.h  Shape.h
platform/: CMakeLists.txt  SDLApp.cpp  SDLApp.h
